--- a/package.json
+++ b/package.json
@@ -74,6 +74,9 @@
 		]
 	},
 	"dependencies": {
+		"@emotion/react": "^11.10.8",
+		"@emotion/styled": "^11.10.8",
+		"@mui/material": "^5.12.2",
 		"prop-types": "^15.7.2",
 		"query-string": "^7.0.1",
 		"react": "^18.2.0",
